# EuroTech

./: .deploy.env.example  .gitignore  DEPLOY.md  HONESTY.md  README.md  deploy.sh  docker-compose.prod.yml  main.m5f2
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  database.py  pyproject.toml  seed.py
backend/tests/: test_clustering.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css
frontend/src/components/: Logo.jsx
frontend/src/pages/: GovernmentPortal.jsx
frontend/src/services/: accelSource.js  api.js  detector.js  sensors.js
frontend/src/services/__tests__/: detector.test.js
road-sentinel-hk/: .dockerignore  .env.prod.example  .gitignore  Dockerfile  HONESTY.md  docker-compose.yml  render.yaml
road-sentinel-hk/backend/: database.py  main.py  requirements.txt  seed.py
road-sentinel-hk/backend/models/: accelerometer.py  fusion.py  sound.py  vision.py
road-sentinel-hk/backend/services/: clustering.py  dwd.py  geocoding.py  hk_incidents.py  hko.py  typhoon.py
road-sentinel-hk/frontend/: Caddyfile  index.html  package-lock.json  package.json  vite.config.js
road-sentinel-hk/frontend/src/: App.jsx  index.css
road-sentinel-hk/frontend/src/components/: HazardList.jsx  Map.jsx  WeatherBanner.jsx
road-sentinel-hk/frontend/src/pages/: Dashboard.jsx  DriverMode.jsx  GovernmentPortal.jsx
road-sentinel-hk/frontend/src/services/: api.js  detector.js  geo.js  sensors.js
