[project]
name = "bumpless-backend"
version = "0.1.0"
description = "BumpLess — accelerometer road-defect detection backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
]

[tool.uv]
package = false
